# NewServer

./: .gitignore  NewServer.sln
Lib/: libzmq.lib
NewServer/: CMakeCache.txt  CMakeLists.txt  NewServer.vcxproj  NewServer.vcxproj.filters  Prec.cpp  Prec.h  main.cpp  netapi.h
NewServer/Common/: Common.cpp  Common.h  DynamicPool.cpp  DynamicPool.h  GPython.cpp  GPython.h  GTimer.cpp  GTimer.h  Generate.h  List.h  Lock.h  Log.cpp  Log.h  MemoryPool.cpp  MemoryPool.h  ObjectFactory.cpp  ObjectFactory.h  Portable.cpp  Portable.h  Thread.cpp  Thread.h
NewServer/Debug/: NewServer.ilk  vc141.idb
NewServer/Debug/NewServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NewServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NewServer/Logic/: CJsonLog.cpp  CJsonLog.h  CPlayer.cpp  CPlayer.h  CPlayerRecv.cpp  Define.h  Person.cpp  Person.h  ProjectManger.cpp  ProjectManger.h  Reflector.cpp  Reflector.h  SingleTon.h
NewServer/Net/: CClient.cpp  CClient.h  GenerateProto.bat  IoThread.cpp  IoThread.h  MsgFilter.cpp  MsgFilter.h  NetPack.cpp  NetPack.h  NetWorkManger.cpp  NetWorkManger.h  player.proto
NewServer/NewServer/: NewServer.vcxproj  Prec.h  main.cpp
NewServer/NewServer/Common/: Common.h
NewServer/NewServer/Debug/: vc141.idb
NewServer/NewServer/Debug/NewServer.tlog/: CL.write.1.tlog  NewServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog
NewServer/NewServer/Logic/: Person.cpp  Person.h  Reflector.cpp
NewServer/gflags/gflags_win/gflags/: gflags.h
NewServer/google/protobuf/: unittest_lazy_dependencies.pb.h  unittest_lite.pb.h  unittest_no_arena.pb.h  unittest_no_arena_import.pb.h  unittest_proto3.pb.h  unittest_well_known_types.pb.h
NewServer/google/protobuf/util/internal/testdata/: books.pb.h  maps.pb.h
NewServer/libevent/include/event2/: rpc.h
NewServer/logs/: 2020_01_19_20_03_50_log.txt  2020_01_19_20_16_34_log.txt  2020_01_19_20_19_35_log.txt  2020_01_19_20_36_20_log.txt  2020_01_19_20_42_22_log.txt  2020_01_19_20_44_27_log.txt  2020_01_19_20_48_40_log.txt  2020_01_19_20_56_34_log.txt
NewServer/protobuffer/: player.pb.cc  player.pb.h
NewServer/protobuffer/google/protobuf/: any_test.pb.h  map_proto2_unittest.pb.h  map_unittest.pb.h  service.h  unittest.pb.cc  unittest_embed_optimize_for.pb.h  unittest_import_public.pb.h  unittest_mset.pb.h  unittest_optimize_for.pb.h
NewServer/protobuffer/google/protobuf/compiler/cpp/: cpp_test_bad_identifiers.pb.h
NewServer/protobuffer/google/protobuf/util/: message_differencer_unittest.pb.h
NewServer/protobuffer/google/protobuf/util/internal/testdata/: default_value.pb.h  struct.pb.h
NewServer/python3.7/include/: Python.h
NewServer/pythonscript/: main_script.py
NewServer/tcmalloc/Debug/: libtcmalloc_minimal-debug.exp  libtcmalloc_minimal-debug.lib
NewServer/tcmalloc/Release/: libtcmalloc_minimal.lib
NewServer/x64/Debug/: vc141.idb
NewServer/x64/Debug/NewServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NewServer.lastbuildstate
NewServer/zeromq-4.2.5/builds/msvc/vs2015/inproc_lat/: inproc_lat.vcxproj
NewServer/zeromq-4.2.5/builds/msvc/vs2015/inproc_thr/: inproc_thr.vcxproj
NewServer/zeromq-4.2.5/builds/msvc/vs2015/libzmq/: libzmq.vcxproj
NewServer/zeromq-4.2.5/builds/msvc/vs2015/local_lat/: local_lat.vcxproj
NewServer/zeromq-4.2.5/builds/msvc/vs2015/local_thr/: local_thr.vcxproj
NewServer/zeromq-4.2.5/builds/msvc/vs2015/remote_lat/: remote_lat.vcxproj
NewServer/zeromq-4.2.5/builds/msvc/vs2015/remote_thr/: remote_thr.vcxproj
Temp/Compile/NewServer/NewServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  NewServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TestClient/: CMakeLists.txt  TestClient.vcxproj  main.cpp
TestClient/google/protobuf/: map_lite_unittest.pb.h  unittest_arena.pb.h  unittest_custom_options.pb.h  unittest_empty.pb.h  unittest_import.pb.h  unittest_lazy_dependencies_custom_option.pb.h  unittest_proto3_arena.pb.h
TestClient/google/protobuf/compiler/cpp/: cpp_test_large_enum_value.pb.h
TestClient/google/protobuf/util/: json_format_proto3.pb.h
TestClient/google/protobuf/util/internal/testdata/: anys.pb.h
TestClient/libevent/include/event2/: event-config.h
TestClient/protobuffer/: GenerateProto.bat  player.pb.cc  player.pb.h  player.proto
TestClient/protobuffer/google/protobuf/: unittest.pb.h  unittest_drop_unknown_fields.pb.h  unittest_import_lite.pb.h  unittest_import_public_lite.pb.h  unittest_lazy_dependencies_enum.pb.h  unittest_lite_imports_nonlite.pb.h  unittest_mset_wire_format.pb.h  unittest_no_arena_lite.pb.h  unittest_no_field_presence.pb.h  unittest_no_generic_services.pb.h  unittest_preserve_unknown_enum.pb.h  unittest_preserve_unknown_enum2.pb.h  unittest_proto3_arena_lite.pb.h  unittest_proto3_lite.pb.h
TestClient/protobuffer/google/protobuf/util/: json_format.pb.h
TestClient/protobuffer/google/protobuf/util/internal/testdata/: default_value_test.pb.h  field_mask.pb.h  oneofs.pb.h  proto3.pb.h  timestamp_duration.pb.h  wrappers.pb.h
TestClient/x64/Debug/TestClient.tlog/: TestClient.lastbuildstate
